Second Commit: Implemented BaggageManagement Component